--- a/foundations/02-class-id-selectors/index.html
+++ b/foundations/02-class-id-selectors/index.html
@@ -8,10 +8,9 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <p>Number 1 - I'm a class!</p>
-    <div>Number 2 - I'm one ID.</div>
-    <p>Number 3 - I'm a class, but cooler!</p>
-    <div>Number 4 - I'm another ID.</div>
-    <p>Number 5 - I'm a class!</p>
+    <p style="background-color:lightcoral; font: size 24px;font-family:verdana ;">Number 1 - I'm a class!</p>
+    <div style="color:blue ;font-size: 36px ;font-family: verdana;">Number 2 - I'm one ID.</div>
+    <p style="background-color:lightcoral ;font-family:sans-serif ;font-size: 24px;">Number 3 - I'm a class, but cooler!</p>
+    <div style="background-color:lightgreen ;font-weight:700;font-family:sans-serif ;font-size: 24px;">Number 4 - I'm another ID.</div>
+    <p style="background-color:lightcoral ;font: size 24px;font-family:Verdana ;">Number 5 - I'm a class!</p>
   </body>
-</html>
